--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "business-card",
+  "name": "ecomzhi-portfolio",
+  "homepage": "https://jjamesliu.github.io/ecomzhi-portfolio/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,7 +8,10 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
+
   },
   "dependencies": {
     "react": "^19.1.0",
