--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ecomzhi-portfolio",
-  "homepage": "https://jjamesliu.github.io/ecomzhi-portfolio/",
+  "homepage": "https://jjamesliu.github.io/Ecomzhi-Portfolio/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
